--- a/angular/tpl/desktop/feeds.html
+++ b/angular/tpl/desktop/feeds.html
@@ -1,11 +1,17 @@
 <div ng-controller="FeedCtrl" class="content-wrapper">
-<div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-<div class="center-content">
-    <div class="row">
+    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="center-content">
+        <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
-                        <h2><i class="fa fa-tasks" aria-hidden="true"></i> &nbsp;LIST OF FEEDS</h2>
+                        <i class="fa fa-rss" aria-hidden="true"></i>
+                        <h2>Feeds</h2>
+                    </div>
+                    <div class="topbar-right">
+                        <ul class="topbar-list">
+                            <li> {{activetab == 'myfeed' ? 'My Feeds | ' + myfeeds.total :'Wished Feeds | ' + wishedfeeds.total}} </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -14,7 +20,7 @@
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
-                        <span class="lefttext">{{activetab == 'myfeed' ? 'My Feeds':'Wished Feeds'}}</span>
+                        <span class="lefttext">Showing <b>{{otherpeoples.from}}</b> to <b>{{otherpeoples.to}}</b> of <b>{{otherpeoples.total}}</b> Results.</span>
                     </div>
                     <div class="topbar-right">
                         <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">| Filter by <i class="fa fa-angle-down ml-10"></i></span>
@@ -28,9 +34,9 @@
         </div>
         <div class="row mt-15" ng-if="activetab == 'myfeed'">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total">
-               <div class="table-card">
-                    <div class="flex-top-space" ui-sref="app.viewfeed({id:data.id})">
-                        <div class="table-img">
+                <div class="table-card">
+                    <div class="flex-top-space">
+                        <div class="table-img" ui-sref="app.viewfeed({id:data.id})">
                             <img ng-src="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}" />
                         </div>
                         <div class="table-content">
@@ -48,7 +54,7 @@
                             </div>
                         </div>
                         <div class="table-option">
-                           
+
                             <a ng-click="sharefeedtosocial(data)"><i class="fa fa-share"></i></a>
                             <a ng-click="removefeed(key,data.id)"><i class="fa fa-minus-circle"></i></a></a>
                         </div>
@@ -61,8 +67,8 @@
         </div>
         <div class="row mt-15" ng-if="activetab == 'wishedfeed'">
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total">
-               <div class="table-card">
-                 <div class="flex-top-space">
+                <div class="table-card">
+                    <div class="flex-top-space">
                         <div class="table-img" ui-sref="app.viewfeed({id:data.id})">
                             <img ng-src="{{data.files[0].filetype == 1 ? IMGURL : ''}}{{data.files[0].thumbnail}}" />
                         </div>
@@ -81,17 +87,17 @@
                     <div class="full-col mt-10">{{data.description | cut:true:120:'..'}}</div>
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-12"  ng-if="wishedfeeds.total > 0 && !formLoading">
+        </div>
+        <div class="row mb-30">
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="wishedfeeds.total > 0 && !formLoading">
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
             </div>
         </div>
+    </div>
+    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
-<div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
-</div>
-
-
 <style type="text/css">
-   .table-img img{
-      width: 100px;
-   }
+    .table-img img {
+        width: 100px;
+    }
 </style>
