--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -118,3 +118,11 @@
     </div>
     <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
+
+<style type="text/css">
+    .ng-confirm-content-pane{
+        min-height: 70px!important;
+    }.ng-confirm-buttons button{
+        text-transform : capitalize!important;
+    }
+</style>
