--- a/angular/tpl/desktop/feeds.html
+++ b/angular/tpl/desktop/feeds.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="topbar-right">
                         <ul class="topbar-list">
-                            <li> {{activetab == 'myfeed' ? 'My Feeds | ' + myfeeds.total :'Wished Feeds | ' + wishedfeeds.total}} </li>
+                            <li> {{activetab == 'myfeed' ? 'My Feeds ' :'Wished Feeds '}} <b>&nbsp; {{activetab == 'myfeed' ?  myfeeds.total : wishedfeeds.total}}</b> </li>
                         </ul>
                     </div>
                 </div>
@@ -20,10 +20,10 @@
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
-                        <span class="lefttext">Showing <b>{{otherpeoples.from}}</b> to <b>{{otherpeoples.to}}</b> of <b>{{otherpeoples.total}}</b> Results.</span>
+                        <span class="lefttext">Showing <b>{{ activetab == 'myfeed' ? myfeeds.from : wishedfeeds.from }} </b> to <b>{{ activetab == 'myfeed' ? myfeeds.to : wishedfeeds.to }}</b> of <b>{{ activetab == 'myfeed' ? myfeeds.total : wishedfeeds.total }}</b> Results.</span>
                     </div>
                     <div class="topbar-right">
-                        <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">| Filter by <i class="fa fa-angle-down ml-10"></i></span>
+                        <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter by <i class="fa fa-angle-down ml-10"></i></span>
                         <ul class="dropdown-menu">
                             <li><a ng-click="setactivetab('myfeed')">My Feeds</a></li>
                             <li><a ng-click="setactivetab('wishedfeed')">Wished Feeds</a></li>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="row mt-15" ng-if="activetab == 'myfeed'">
-            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in myfeeds.data | itemsPerPage: totalPerPage" total-items="myfeeds.total" pagination-id="myfeed-pagination" current-page="myfeedpagination.current" >
                 <div class="table-card">
                     <div class="flex-top-space">
                         <div class="table-img" ui-sref="app.viewfeed({id:data.id})">
@@ -61,12 +61,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="myfeeds.total > 0 && !formLoading">
-                <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="activetab == 'myfeed' && myfeeds.last_page > 1 && !formLoading">
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl" pagination-id="myfeed-pagination"></dir-pagination-controls>
             </div>
         </div>
         <div class="row mt-15" ng-if="activetab == 'wishedfeed'">
-            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total">
+            <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" dir-paginate="(key,data) in wishedfeeds.data | itemsPerPage: totalPerPage" total-items="wishedfeeds.total" current-page="wishedfeedpagination.current"  pagination-id="wishedfeed-pagination">
                 <div class="table-card">
                     <div class="flex-top-space">
                         <div class="table-img" ui-sref="app.viewfeed({id:data.id})">
@@ -89,8 +89,8 @@
             </div>
         </div>
         <div class="row mb-30">
-            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="wishedfeeds.total > 0 && !formLoading">
-                <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="activetab == 'wishedfeed' && wishedfeeds.last_page > 1 && !formLoading">
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl" pagination-id="wishedfeed-pagination"></dir-pagination-controls>
             </div>
         </div>
     </div>
