--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -20,7 +20,7 @@
             <div class="col-lg-12 col-md-12">
                 <div class="topbar result">
                     <div class="topbar-left">
-                        <span class="lefttext">Active Projects <b>{{projects.total}}</b> Projects.</span>
+                        <span class="lefttext">Showing <b>{{projects.from}}</b> to <b>{{projects.to}}</b> of <b>{{projects.total}}</b> Results.</span>
                     </div>
                     <div class="topbar-right">
                         <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sort by <i class="fa fa-angle-down ml-10"></i></span>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="row mb-30">
-            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="projects.total > 0 && !formLoading">
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="projects.last_page > 0 && !formLoading">
                 <dir-pagination-controls on-page-change="pageChanged(newPageNumber)" class="pagination-ctrl"></dir-pagination-controls>
             </div>
         </div>
