loading and heade fixed

--- a/angular/tpl/blocks/desktop/header.html
+++ b/angular/tpl/blocks/desktop/header.html
@@ -120,6 +120,6 @@
             </div>
         </nav>
     </header>
-<div class="loader" ng-if="formLoading">
+<div class="loader" ng-if="formLoading || authLoading">
     <i class="fa fa-spinner fa-pulse fa-5x fa-fw"></i>
 </div> 
