design tweaks added

--- a/angular/tpl/desktop/friends.html
+++ b/angular/tpl/desktop/friends.html
@@ -47,7 +47,7 @@
                             <ul class="dropdown-menu">
                                 <li><a ng-click="collaborate(friend)">Collaborate</a></li>
                                 <li><a title="Share to Earn" ng-click="sharefriendtosocial(friend)">Share</a></li>
-                                <li><a ng-click="changefriendfollowstatus(key,friend);">Un Follow</a></li>
+                                <li><a ng-click="changefriendfollowstatus(key,friend);">Unfollow</a></li>
                             </ul>
                         </div>
                     </div>
@@ -86,9 +86,9 @@
         </div>
         <div class="row">
             <div class="col-lg-12 col-md-12">
-                <div class="topbar">
+                <div class="topbar bg-gray">
                     <div class="topbar-left">
-                        <h2>Follow more members to see great content in your activity stream.</h2>
+                        <h2 class="text-white">Follow more members to see great content in your activity stream.</h2>
                     </div>
                 </div>
             </div>
