--- a/angular/index.html
+++ b/angular/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:fb="http://ogp.me/ns/fb#" lang="en" data-ng-app="app">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <!-- <base href="/project/Collabro/angular/"> -->
+    <!--  <base href="/project/Collabro/angular/"> -->
     <base href="/collabro-v1/collabro-website/angular/" />
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
@@ -14,96 +15,45 @@
     <meta property="fb:app_id" content="307916346432414" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Collabro" />
-    <meta
-      property="og:description"
-      content="Collabro is The Platform for Entrepeneur to Collabrate and to Business
-      Complete with unlimited features & flexibility and unparalleted customer support"
-    />
+    <meta property="og:description" content="Collabro is The Platform for Entrepeneur to Collabrate and to Business
+      Complete with unlimited features & flexibility and unparalleted customer support" />
     <meta property="og:site_name" content="Collabro" />
     <meta property="og:url" content="http://mswebsg.info/" />
     <meta property="og:image" content="http://mswebsg.info/development/img/sharelogo.png" />
     <link rel="icon" type="image/ico" href="img/favicon.png" />
     <!-- Font awesome CSS File -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- Font awesome CSS File -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" rel="stylesheet" />
     <link rel="stylesheet" href="libs/angular/angular-aside/angular-aside.css" />
 
     <!-- Slick slider -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/ng-notify/0.8.0/ng-notify.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-notify/0.8.0/ng-notify.min.css" />
     <!-- Slick slider -->
     <!-- //Libraries CSS Files -->
     <!-- Main Css Files -->
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
     <!-- Skitter Slider -->
     <link rel="stylesheet" href="libs/skitter-slider/skitter.css" type="text/css" />
+    
     <!-- Skitter Slider -->
     <!-- // Main Css Files -->
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"
-    ></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <!-- Bootstrap -->
-    <script
-      type="text/javascript"
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    ></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- Angular -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-animate.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-aria.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-cookies.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-messages.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-resource.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-touch.js"
-      type="text/javascript"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-animate.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-aria.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-cookies.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-messages.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-resource.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-sanitize.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-touch.js" type="text/javascript"></script>
 
     <script src="libs/chart/chart.min.js"></script>
     <script src="libs/chart/angular-chart.min.js"></script>
@@ -122,18 +72,9 @@
     <script src="https://w.soundcloud.com/player/api.js"></script>
 
     <!--- File Uplod -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload.min.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload-shim.js"
-      type="text/javascript"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/12.2.13/ng-file-upload-shim.js" type="text/javascript"></script>
     <!--- File Uplod -->
 
     <!-- Social Media -->
@@ -221,9 +162,10 @@
     <script src="js/modal-js/otpmodal.js"></script>
     <script src="js/modal-js/chatusermodal.js"></script>
     <script src="js/modal-js/requestmodal.js"></script>
-  </head>
+</head>
 
-  <body ng-controller="AppCtrl" ng-class="{'cookie-active' : showheader}">
+<body ng-controller="AppCtrl" ng-class="{'cookie-active' : showheader}">
     <div class="app" ui-view></div>
-  </body>
+</body>
+
 </html>
