--- a/angular/index.html
+++ b/angular/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <!--  <base href="/project/Collabro/angular/"> -->
-    <base href="/collabro-v1/collabro-website/angular/" />
+    <base href="/project/Collabro/angular/">
+    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -32,12 +32,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-notify/0.8.0/ng-notify.min.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.css" />
     <!-- Slick slider -->
     <!-- //Libraries CSS Files -->
     <!-- Main Css Files -->
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" />
     <!-- Skitter Slider -->
     <link rel="stylesheet" href="libs/skitter-slider/skitter.css" type="text/css" />
+    <link rel="stylesheet" href="libs/confirm/angular-confirm.css" type="text/css" />
     
     <!-- Skitter Slider -->
     <!-- // Main Css Files -->
@@ -88,6 +90,9 @@
     <!-- Check Device -->
     <script src="libs/IsMobile/angular-ismobile.min.js"></script>
     <script src="libs/IsMobile/isMobile.js"></script>
+    <script src="libs/confirm/angular-confirm.js"></script>
+
+
     <!-- Check Device -->
 
     <!-- FireBase -->
@@ -135,6 +140,7 @@
 
     <script src="libs/webnotification/web-notification.js"></script>
     <script src="libs/webnotification/angular-web-notification.js"></script>
+     <script src="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.js"></script>
 
     <!-- App -->
     <script src="js/app.js"></script>
