--- a/angular/tpl/desktop/userchat.html
+++ b/angular/tpl/desktop/userchat.html
@@ -44,7 +44,7 @@
                         <div class="message-wrap" ng-repeat="message in chatData">
                             <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
                                 <div class="info">{{message.message}}
-                                    <img ng-src="{{IMGURL}}{{message.fileurl}}" ng-click="viewChatImg(message);" alt="Chat" ng-if="message.isfile">
+                                    <img ng-src="{{IMGURL}}{{message.fileurl}}" ng-click="viewChatImg(message.fileurl);" alt="Chat" ng-if="message.isfile">
                                     <div class="time-left">
                                         <span am-time-ago="message.created_at" ng-if="checkDate(message.created_at) == true"></span>
                                         <time ng-if="checkDate(message.created_at) == false">{{ message.created_at | amDateFormat: 'DD-MMM-YY hh:mm a' }}</time></div>
@@ -54,8 +54,8 @@
                     </div>
                     <div class="sender">
                         <div class="msg-text">
-                            <a class="small-btn" href="#"><i class="fa fa-smile-o"></i></a>
-                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendPrivateReplymessage()">
+                            <a class="small-btn"><i class="fa fa-smile-o"></i></a>
+                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendPrivateReplymessage()" id="emojionearea">
                             <a class="small-btn" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="senduserchatattachment($files);"><i class="fa fa-paperclip"></i></a>
                         </div>
                         <div class="chat-btn" ng-click="sendPrivateReplymessage()"><i class="fa fa-send"></i></div>
@@ -66,3 +66,8 @@
     </div>
     <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
+<style type="text/css">
+    .emojionearea-editor {
+  min-height: 3em !important;
+}
+</style>
