--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -29,23 +29,25 @@
                 <!-- product left -->
                 <div class="content-detail-left">
                     <div class="slider-wrapper">
-                    	<slick data="viewData.images" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
-                           <div class="width100 sliderframer" ng-repeat="(key,image) in viewData.images">
-		                        <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
-		                            <span ng-if="image.filetype == 2">
-		                              <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
-		                              <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
-		                          </span>
-		                        </div>
-		                    </div>
-                        </slick>
-                        <div class="thumbslider">
-				         <slick data="viewData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
-				            <div class="thumbholder" ng-repeat="(key,image) in viewData.images" >
-                              <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
-                           </div>
-				         </slick>
-				        </div>
+                        <div class="custom-slider">
+                            <slick data="viewData.images" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
+                                <div class="width100 sliderframer" ng-repeat="(key,image) in viewData.images">
+                                    <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
+                                        <span ng-if="image.filetype == 2">
+                                        <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
+                                        <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
+                                    </span>
+                                    </div>
+                                </div>
+                            </slick>
+                            <div class="thumbslider">
+                                <slick data="viewData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
+                                    <div class="thumbholder" ng-repeat="(key,image) in viewData.images" >
+                                        <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                                    </div>
+                                </slick>
+                            </div>
+                        </div>
                     </div>
                     <div class="product-detail-info">
                         
