slider issue fixed

--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -163,3 +163,16 @@
    </div>
    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
+
+<style type="text/css">
+    .thumbslider{
+        padding: 10px;
+    }/*
+    .thumbslider .slick-track{
+        width: 100%!important;
+    }*/
+    .slider-wrapper .thumbslider {
+        background: #7E8EA4;
+        padding: 10px;
+    }
+</style>
